--- a/Style.css
+++ b/Style.css
@@ -47,12 +47,12 @@ li {
   text-shadow: 2px 2px hwb(0 56% 29%);
 }
 
-/* .div1{
+.div1{
   display: inline;
   border: 2px solid #939997;
   margin: 20px;
   padding: 20px;
-} */
+}
 
 span {
   display: inline-block;
