--- a/tests.css
+++ b/tests.css
@@ -1,11 +1,20 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: Arial;
+}
+
 header {
   background-color: #bdb8b8;
+  padding: 20px 0;
   position: fixed;
   width: 100%;
   z-index: 1;
   top: 0;
   left: 0;
   text-align: center;
+  height: 100px;
 }
 
 header h2 {
@@ -35,16 +44,15 @@ header h2 {
   text-align: center;
 }
 
-.list{
+nav{
   background-color: yellow;
-  padding: 7px;
-  margin: 1px;
-  width: 95%;
-  /* display: inline-block; */
+  width: 100%;
+  display: inline-block;
   font-size: 24px;
-  border-radius: 30px;
+  padding: 20px 5px;
   position: sticky;
   top: 90px;
+  z-index: 3;
 }
 
 nav ul {
@@ -53,18 +61,103 @@ nav ul {
   margin: 0 auto;
 }
 
+nav ul a{
+  position: relative;
+  bottom: 14px;
+}
+
 nav li {
   width: 25%;
   display: inline-block;
   font-size: 24px;
   border-radius: 30px;
+  position: relative;
+  bottom: 40px;
 }
 
 nav li a {
   text-decoration: none;
-  color: #0000ff;
+  color: black;
+  top: 40px;
+  position: relative;
+  margin: 20px 0;
+  padding: 10px 20px;
+  font-size: 24px;
 }
 
-nav li a.join {
+nav li a.join_2 {
   color: #ff0000;
+}
+
+.image{
+  text-align: center;
+  margin: 80px 0;
+  max-width: 100%;
+  box-sizing: border-box;
+  white-space: nowrap;
+}
+
+.image li{
+  display: inline-block;
+  width: 40%;
+  margin: 20px 5%;
+}
+
+.image li img{
+  max-width: 100%;
+}
+
+main{
+  margin: 80px auto;
+  padding: 0 40px;
+  max-width: 100%;
+  box-sizing: border-box;
+}
+
+article h3{
+  color: red;
+  font-size: 40px;
+}
+
+article p{
+  line-height: 2em;
+}
+
+.hero{
+  text-align: center;
+  margin: 80px 0;
+  max-width: 100%;
+  box-sizing: border-box;
+}
+
+.hero_image img{
+  margin-top: 90px;
+  max-width: 100%;
+
+}
+
+.join{
+  background: #a8999c;
+  text-align: center;
+  padding: 60px 20px;
+  color: grey;
+}
+
+.join h2{
+  font-size: 36px;
+}
+
+form input{
+  margin: 20px 0;
+  padding: 10px 20px;
+  font-size: 24px;
+  border-radius: 28px;
+border: 4px solid white;
+}
+
+footer{
+  background: red;
+  color: white;
+  padding: 10px;
+  text-align: center;
 }
